tests/ui/rfcs/rfc-2093-infer-outlives/dont-infer-static.stderr
error[E0310]: the parameter type `U` may not live long enough
  --> $DIR/dont-infer-static.rs:6:10
   |
LL |     bar: Bar<U>
   |          ^^^^^^
   |          |
   |          the parameter type `U` must be valid for the static lifetime...
   |          ...so that the type `U` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/dont-infer-static.rs:8:15
   |
LL | struct Bar<T: 'static> {
   |               ^^^^^^^
help: consider adding an explicit lifetime bound
   |
LL | struct Foo<U: 'static> {
   |             +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
